@@ -2,7 +2,8 @@
 
 ==== Features
 
-* Unified Node and NodeSet implementations of #search, #xpath and #css
+* Unified Node and NodeSet implementations of #search, #xpath and #css.
+* Added Node#lang and Node#lang=.
 
 
 ==== Bug fixes
